--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="row ">
                 <div class="col l6 s12 ">
                     <h5 class="white-text ">Über uns</h5>
-                    <p class="grey-text text-lighten-4 center-align">Wir sind ein Team aus begeisterten Softwareentwicklern und ambitionierten Kletterern aus Karlsruhe. Mit Projekten wie diesem, vereinen wir beide Leidenschaften mit dem Ziel praktische Software-Lösungen für Kletterhallen zu schaffen.
+                    <p class="grey-text text-lighten-4">Wir sind ein Team aus begeisterten Softwareentwicklern und ambitionierten Kletterern aus Karlsruhe. Mit Projekten wie diesem, vereinen wir beide Leidenschaften mit dem Ziel praktische Software-Lösungen für Kletterhallen zu schaffen.
                     </p>
 
                     <div class="row center">
