--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h5 class="header col s12 light">Das moderne Framework für Routen-Management, -Abrechnung und Analyse in Kletterhallen.</h5>
                 </div>
                 <div class="row center">
-                    <a href="https://routestack.herokuapp.com/" target="_blank" id="download-button" class="btn-large waves-effect waves-light light-blue">Live Demo</a>
+                    <a href="https://routestack.herokuapp.com/" target="_blank" class="btn-large waves-effect waves-light light-blue">Live Demo</a>
                 </div>
                 <br><br>
 
@@ -231,7 +231,7 @@
             </div>
 
             <!-- Pricing -->
-            <table class="striped centered ">
+            <table class="striped centered">
                 <colgroup>
                     <col class=" " />
                     <col class="featured-col " />
