--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 </div>
                 <div class="col s12 m6 center ">
                     <h5>Übersichtliches Routen-Management</h5>
-                    <p class="left-align light center-align ">In Routestack werden alle geschraubten Routen und Boulder aufgeführt. Sie mit einem Blick, welche Routen und Boulder als nächstes ausgetauscht werden müssen, können anstehende Arbeiten im Vorraus planen und bestimmten Schraubern zuweisen.
-                        Das spart Ihnen Zeit bei der Koordination und vermeidet Personalengpässe.
+                    <p class="left-align light center-align ">In Routestack werden alle geschraubten Routen und Boulder aufgeführt. Sie sehen mit einem Blick, welche Routen und Boulder als nächstes ausgetauscht werden müssen, können anstehende Arbeiten im Vorraus planen und bestimmten Schraubern
+                        zuweisen. Das spart Ihnen Zeit bei der Koordination und vermeidet Personalengpässe.
                     </p>
                 </div>
             </div>
