--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="col s12 center ">
                     <h3><i class="mdi-content-send brown-text "></i></h3>
                     <h4>Preise</h4>
-                    <p class="left-align light center-align ">Wir bieten eine preiswerte Alternative zu vergleichbaren Software-Lösung - bei ähnlicher Funktionalität!
+                    <p class="left-align light center-align ">Wir bieten Ihnen eine effiziente und zeitsparende Lösung für Routenbau-Management und -Abrechnung in Ihrer Kletterhalle!
                     </p>
                 </div>
             </div>
