--- a/index.html
+++ b/index.html
@@ -370,11 +370,8 @@
                             <h6>Florian Kalinke</h6>
                             <p>Software-Entwickler und Data Scientist aus Karlsruhe</p>
                             <div class="social-media-footer hcenter">
-                                <a class="white-text" href="http://flopska.com/blog/">
+                                <a class="white-text" href="http://flopska.com/">
                                     <i class="fas fa-globe-europe"></i>
-                                </a>
-                                <a class="white-text" href="https://www.facebook.com/florian.kalinke">
-                                    <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a class="white-text" href="https://www.xing.com/profile/Florian_Kalinke/">
                                     <i class="fab fa-xing"></i>
