--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <h4>€ 30</h4>
                         </td>
                         <td>
-                            <h4>€ 50</h4>
+                            <h4>auf Anfrage</h4>
                         </td>
                     </tr>
                     <tr>
