--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                     <h5 class="white-text ">Kontakt</h5>
                     <ul>
                         <li><a class="white-text " href="mailto:info@patrickgebert.de"><i class="material-icons">email</i>Routestack</a></li>
+                        <li><a class="white-text" href="imprint.html#imprint"><i class="material-icons">account_balance</i>Impressum</a></li>
                     </ul>
                 </div>
             </div>
