Changed profile description.

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <div class="col s12 m6">
                             <img src="img/florian_kalinke.jpg" alt="" class="circle responsive-img">
                             <h6>Florian Kalinke</h6>
-                            <p>Software-Entwickler und Data Scientist aus Karlsruhe</p>
+                            <p>Software-Entwickler und Data Scientist</p>
                             <div class="social-media-footer hcenter">
                                 <a class="white-text" href="http://flopska.com/">
                                     <i class="fas fa-globe-europe"></i>
@@ -384,7 +384,7 @@
                         <div class="col s12 m6">
                             <img src="img/patrick_gebert.jpg" alt="" class="circle responsive-img">
                             <h6>Patrick Gebert</h6>
-                            <p>Software-Entwickler und Data Scientist aus Karlsruhe</p>
+                            <p>Software-Entwickler und Data Scientist</p>
                             <div class="social-media-footer hcenter">
                                 <a class="white-text" href="https://www.patrickgebert.de/">
                                     <i class="fas fa-globe-europe"></i>
