--- a/imprint.html
+++ b/imprint.html
@@ -19,7 +19,22 @@
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">Routestack</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="index.html#advantages">Vorteile</a></li>
+                <li><a href="index.html#features">Features</a></li>
+                <li><a href="index.html#reference">Referenzen</a></li>
+                <li><a href="index.html#pricing">Preis</a></li>
+                <li><a href="index.html#contact">Kontakt</a></li>
+            </ul>
 
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="index.html#advantages">Vorteile</a></li>
+                <li><a href="index.html#features">Features</a></li>
+                <li><a href="index.html#reference">Referenzen</a></li>
+                <li><a href="index.html#pricing">Preis</a></li>
+                <li><a href="index.html#contact">Kontakt</a></li>
+            </ul>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
 
