--- a/imprint.html
+++ b/imprint.html
@@ -54,14 +54,34 @@
                     Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen
                     Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die
                     auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt
-                    der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+                    der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+                </p>
                 <h5>Datenschutz</h5>
                 <p>
                     Die Nutzung unserer Webseite ist in der Regel ohne eine Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adresse) erhoben werden, erfolgt dies – soweit es möglich ist–
                     immer auf freiwilliger Basis. Wir geben Ihre Daten ohne Ihre ausdrückliche Zustimmung nicht an Dritte weiter. Außerdem weisen wir Sie darauf hin, dass die Datenübertragung im Internet (wie beispielsweise bei der Kommunikation über
                     E-Mail) Sicherheitslücken aufweisen kann. Denn ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. Wir widersprechen hiermit ausdrücklich der Nutzung von im Rahmen der Impressumspflicht veröffentlichten
                     Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien. Die Betreiber dieser Seiten behalten sich ausdrücklich vor, im Fall der unverlangten Zusendung von Werbeinformationen,
-                    etwa durch Spam-Mails, rechtliche Schritte einzuleiten.</p>
+                    etwa durch Spam-Mails, rechtliche Schritte einzuleiten.
+                </p>
+
+                <a href="http://www.agb.de">Gratis Impressum</a> von agb.de</i>
+                <h5>Datenschutzerklärung (DSGVO)</h5>
+                <p>
+                    Auf dieser Webseite werden keine personenbezogenen Daten erhoben, gespeichert oder verarbeitet. Es werden keine Cookies verwendet.
+                </p>
+                <h5>Data Protection Policy (GDPR)</h5>
+                <p>
+                    This website does not collect, store or process Personally Identifiable Information (PII). This website does not require the use of cookies.
+                </p>
+                <h5>Verweis auf Dritte</h5>
+                <p>
+                    Diese Website wird auf <a href="https://www.github.com/">Github</a> als <a href="https://help.github.com/en/articles/what-is-github-pages">Github Pages</a> gehostet. Die Github Global Privacy Practices sind <a href="https://help.github.com/en/articles/global-privacy-practices">hier</a>                    hinterlegt.
+                </p>
+                <h5>Third Party Inclusion</h5>
+                <p>
+                    This website is hosted by <a href="https://www.github.com/">Github</a> using <a href="https://help.github.com/en/articles/what-is-github-pages">Github Pages</a>. The Github Global Privacy Practices are available <a href="https://help.github.com/en/articles/global-privacy-practices">hier</a>.
+                </p>
             </div>
         </div>
     </div>
