--- a/imprint.html
+++ b/imprint.html
@@ -45,8 +45,9 @@
                 <br/>
                 <h6>Gebert & Kalinke GbR</h6>
                 <p> Kriegsstraße 178<br /> 76133 Karlsruhe
-                    <br /> E-Mail info@patrickgebert.de<br /> Tel 015787389137<br /></p>
-                vertretungsberechtigte Gesellschafter
+                    <br /> E-Mail info@patrickgebert.de<br /> Tel 015787389137<br />
+                </p>
+                <br /> vertretungsberechtigte Gesellschafter:
                 <p>Florian Kalinke<br />Patrick Gebert<br /></p>
                 <!--<p>W-IdNr: DE 22334455</p>-->
                 <h5> Haftung für Inhalte</h5>
@@ -82,6 +83,8 @@
                 <p>
                     This website is hosted by <a href="https://www.github.com/">Github</a> using <a href="https://help.github.com/en/articles/what-is-github-pages">Github Pages</a>. The Github Global Privacy Practices are available <a href="https://help.github.com/en/articles/global-privacy-practices">hier</a>.
                 </p>
+                <br/><br/>
+                <p>Last Update: 25.10.2019</p>
             </div>
         </div>
     </div>
